# view_maybe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build  targets.mk
.github/workflows/: ci.yml
doc/: model.org  view-maybe-r4-slides.org  view-maybe-r5-slides.org  workflow.org
docker-inf/docker-cxx-dev/: Dockerfile  Makefile  README.org
etc/: ci-clang-toolchain.cmake  clang-18-toolchain.cmake  clang-19-toolchain.cmake  gcc-12-toolchain.cmake  gcc-14-toolchain.cmake  llvm-16-toolchain.cmake  llvm-master-toolchain.cmake  llvm-toolchain.cmake
papers/: .clang-format  Makefile  common.tex  lewg-2023-11-28.org  macros.tex  mybiblio.bib  paper_macros.tex  possible.tex  slides-2022-08-30.html  slides-2022-08-30.org  std.tex  styles.tex  uax31.tex  view-maybe-wording.tex  view-maybe.md  view-maybe.org  view-maybe.tex  wg21.bib
papers/stdtex/: paper_macros.tex  styles.tex
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  all.cpp  before_after.cpp  concepts.cpp  main.cpp  view_maybe.h
src/smd/: CMakeLists.txt  maybe.cpp  maybe.h  maybe.t.cpp
src/smd/views/: CMakeLists.txt  concepts.cpp  concepts.h  concepts.t.cpp  maybe.cpp  maybe.h  maybe.t.cpp  movable_box.cpp  movable_box.h  movable_box.t.cpp  nullable.cpp  nullable.h  nullable.t.cpp  possible.cpp  possible.h  possible.t.cpp  view_maybe.cpp  view_maybe.h  view_maybe.h.bak  view_maybe.t.cpp  view_nullable.cpp  view_nullable.h  view_nullable.t.cpp
src/stl-concepts/: CMakeLists.txt
src/view_maybe/: CMakeLists.txt  concepts.cpp  concepts.h  concepts.t.cpp  movable_box.cpp  movable_box.h  movable_box.t.cpp  view_maybe.cpp  view_maybe.h  view_maybe.t.cpp  view_nullable.cpp  view_nullable.h  view_nullable.t.cpp
